1998-10-11  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4 (GNOME_INIT_LIBGTOP): Added optional
	third parameter which is the `script-if-enabled' parameter of
	the GNOME_LIBGTOP_HOOOK.

1998-10-05  Karl Eichwalder <ke@suse.de>

	* gnome-xml-check.m4: Fix typo while signaling the error.

1998-10-05  Raja R Harinath  <harinath@cs.umn.edu>

	* compiler-flags.m4 (warnCFLAGS): Remove `-W'.
	(warn-unused): Remove.

1998-10-01  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4 (libgtop_postinstall): 
	Added `AC_SUBST(libgtop_postinstall)'. This is used in
	`src/daemon/Makefile.am' to make the server suid root or
	sgid kmem if required.

1998-09-28  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: Make it accept libgtop >= 0.25.0 again.

	* gnome-libgtop-sysdeps.m4: Make the default not to build the
	LibGTop examples.

	* compiler-flags.m4 (--enable-warn-unused): New configure parameter
	to add `-Wunused' to the warning flags.
	
1998-09-27  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: Make it require libgtop >= 0.26.2.

1998-09-24  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-ghttp-check.m4: Add checks for -lsocket -lnsl.

1998-09-18  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: Remove commented out code.

1998-09-12  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4: Added (AC_SUBST): `libgtop_have_sysinfo'.

1998-09-09  Martin Baulig  <baulig@merkur.uni-trier.de>

	* gnome-libgtop-sysdeps.m4: Added check for SMP support.
	(--with-libgtop-smp): New parameter, default is to enable
	it only if you're running configure on a SMP system.
	Added (AC_DEFINE): `HAVE_LIBGTOP_SMP' if enabled.
	(LIBGTOP_SMP): New automake conditional.

1998-09-02  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: Remove check for `canonicalize_file_name'.

1998-09-02  Martin Baulig  <martin@home-of-linux.org>
